// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VsItem miniSchema deep render name component 1`] = `
<div
  class="input-group input-group--dirty input-group--text-field primary--text"
>
  <label
    for="name"
  >
    Name
  </label>
  <div
    class="input-group__input"
  >
    <input
      id="name"
      tabindex="0"
      type="text"
    />
  </div>
  <div
    class="input-group__details"
  >
    <!---->
  </div>
</div>
`;

exports[`VsItem miniSchema deep render root component 1`] = `
<div>
  <p>
    Mini
  </p>
   
  <div
    class="grid-container grid-row"
    options="[object Object]"
  >
    <div
      class="md-4 xs-12 rows-2"
    >
      <div
        class="input-group input-group--dirty input-group--text-field primary--text"
      >
        <label
          for="name"
        >
          Name
        </label>
        <div
          class="input-group__input"
        >
          <input
            id="name"
            tabindex="0"
            type="text"
          />
        </div>
        <div
          class="input-group__details"
        >
          <!---->
        </div>
      </div>
    </div>
    <div
      class="xl-6 xs-12"
    >
      <div
        class="input-group input-group--text-field primary--text"
      >
        <label
          for="vorname"
        >
          Vorname
        </label>
        <div
          class="input-group__input"
        >
          <input
            id="vorname"
            tabindex="0"
            type="text"
          />
        </div>
        <div
          class="input-group__details"
        >
          <!---->
        </div>
      </div>
    </div>
    <div
      class="xl-6 xs-12"
    >
      <div
        class="input-group input-group--text-field primary--text"
      >
        <label
          for="strasse"
        >
          Strasse
        </label>
        <div
          class="input-group__input"
        >
          <input
            id="strasse"
            tabindex="0"
            type="text"
          />
        </div>
        <div
          class="input-group__details"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VsItem miniSchema shallow render 1`] = `
<div
  class="input-group input-group--dirty input-group--text-field primary--text"
>
  <label
    for="name"
  >
    Name
  </label>
  <div
    class="input-group__input"
  >
    <input
      id="name"
      tabindex="0"
      type="text"
    />
  </div>
  <div
    class="input-group__details"
  >
    <!---->
  </div>
</div>
`;
